migrate to DI